--- a/css/typography.css
+++ b/css/typography.css
@@ -6,7 +6,6 @@
 
 .banner {
   text-align: center;
-  color: #ffffff;
 }
 
 article {
